# clawbote

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/controller/: account_controller.rs  mod.rs  transfer_controller.rs
src/service/: account_service.rs  mod.rs
