[package]
name = "clawbote"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7.4", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Add these Ethereum-related dependencies
ethers = { version = "2.0", features = ["ws", "rustls"] }
eyre = "0.6"
